[gd_scene load_steps=8 format=2]

[ext_resource path="res://textbox/textbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/overworld/overworld_skel.gd" type="Script" id=2]
[ext_resource path="res://overworld/tilemap/pawns/sign/sign.tscn" type="PackedScene" id=3]
[ext_resource path="res://overworld/tilemap/grid/map.tscn" type="PackedScene" id=5]
[ext_resource path="res://overworld/tilemap/pawns/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://autotile/terrain_simple.tscn" type="PackedScene" id=7]
[ext_resource path="res://overworld/tilemap/trigger/scene_change_trigger.tscn" type="PackedScene" id=8]

[node name="overworld2" type="Node2D"]
script = ExtResource( 2 )

[node name="textbox" parent="." instance=ExtResource( 1 )]

[node name="terrain_simple" parent="." instance=ExtResource( 7 )]
tile_data = PoolIntArray( 262147, 0, 655360, 262148, 0, 851969, 262149, 0, 851969, 262150, 0, 851969, 262151, 0, 851969, 262152, 0, 851969, 262153, 0, 851969, 262154, 0, 851969, 262155, 0, 851969, 262156, 0, 851969, 262157, 0, 851969, 262158, 0, 851969, 262159, 0, 655362, 327683, 0, 720899, 327684, 0, 458752, 327685, 0, 458752, 327686, 0, 458752, 327687, 0, 458752, 327688, 0, 458752, 327689, 0, 458752, 327690, 0, 458752, 327691, 0, 458752, 327692, 0, 458752, 327693, 0, 458752, 327694, 0, 458752, 327695, 0, 720899, 393219, 0, 720899, 393220, 0, 458752, 393221, 0, 458752, 393222, 0, 458752, 393223, 0, 458752, 393224, 0, 458752, 393225, 0, 458752, 393226, 0, 458752, 393227, 0, 458752, 393228, 0, 458752, 393229, 0, 458752, 393230, 0, 458752, 393231, 0, 720899, 458755, 0, 720899, 458756, 0, 458752, 458757, 0, 458752, 458758, 0, 458752, 458759, 0, 458752, 458760, 0, 458752, 458761, 0, 458752, 458762, 0, 458752, 458763, 0, 458752, 458764, 0, 458752, 458765, 0, 458752, 458766, 0, 458752, 458767, 0, 720899, 524291, 0, 720899, 524292, 0, 458752, 524293, 0, 458752, 524294, 0, 458752, 524295, 0, 458752, 524296, 0, 458752, 524297, 0, 458752, 524298, 0, 458752, 524299, 0, 458752, 524300, 0, 458752, 524301, 0, 458752, 524302, 0, 458752, 524303, 0, 720899, 589827, 0, 720899, 589828, 0, 458752, 589829, 0, 458752, 589830, 0, 458752, 589831, 0, 458752, 589832, 0, 458752, 589833, 0, 458752, 589834, 0, 458752, 589835, 0, 458752, 589836, 0, 458752, 589837, 0, 458752, 589838, 0, 458752, 589839, 0, 720899, 655363, 0, 720899, 655364, 0, 458752, 655365, 0, 458752, 655366, 0, 458752, 655367, 0, 458752, 655368, 0, 458752, 655369, 0, 458752, 655370, 0, 458752, 655371, 0, 458752, 655372, 0, 458752, 655373, 0, 458752, 655374, 0, 458752, 655375, 0, 720899, 720899, 0, 720899, 720900, 0, 458752, 720901, 0, 458752, 720902, 0, 458752, 720903, 0, 458752, 720904, 0, 458752, 720905, 0, 458752, 720906, 0, 458752, 720907, 0, 458752, 720908, 0, 458752, 720909, 0, 458752, 720910, 0, 458752, 720911, 0, 720899, 786435, 0, 786432, 786436, 0, 851969, 786437, 0, 851969, 786438, 0, 851969, 786439, 0, 851969, 786440, 0, 851969, 786441, 1073741824, 327680, 786442, 0, 851969, 786443, 0, 851969, 786444, 0, 851969, 786445, 0, 851969, 786446, 0, 851969, 786447, 0, 786434 )

[node name="furniture" parent="." instance=ExtResource( 7 )]
tile_data = PoolIntArray( 393221, 0, 655363, 393222, 1, 65536, 393223, 0, 851968, 393224, 0, 851969, 393225, 0, 851970, 393226, 1, 65536, 393227, 0, 851968, 393228, 0, 851969, 393229, 0, 851970, 458757, 0, 720899, 524293, 0, 786435, 524295, 0, 851968, 524296, 0, 851969, 524297, 0, 851970, 524298, 1, 65536, 524299, 0, 851968, 524300, 0, 851969, 524301, 0, 851970, 524302, 1, 65536, 589829, 1, 65536, 655365, 0, 851968, 655366, 0, 851969, 655367, 0, 851969, 655368, 0, 655362, 655369, 1, 65536, 655370, 0, 851968, 655371, 0, 851969, 655372, 0, 851969, 655373, 0, 851970, 720903, 1, 0, 720904, 0, 720899, 786440, 0, 786434 )

[node name="map" parent="." instance=ExtResource( 5 )]
self_modulate = Color( 1, 1, 1, 0 )
hide_tiles = true

[node name="grid" parent="map" index="0"]
tile_data = PoolIntArray( 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327683, 0, 0, 327695, 0, 0, 393219, 0, 0, 393222, 0, 0, 393226, 0, 0, 393231, 0, 0, 458755, 0, 0, 458767, 0, 0, 524291, 0, 0, 524298, 0, 0, 524302, 0, 0, 524303, 0, 0, 589827, 0, 0, 589829, 0, 0, 589839, 0, 0, 655363, 0, 0, 655369, 0, 0, 655375, 0, 0, 720899, 0, 0, 720911, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 851977, 1073741824, 0 )

[node name="player" parent="map/grid" index="0" instance=ExtResource( 6 )]
position = Vector2( 152, 152 )

[node name="sign_vecino" parent="map/grid" index="1" instance=ExtResource( 3 )]
position = Vector2( 120, 184 )
interact_text = PoolStringArray( "querido DIARIO:", "hoy decore el PISO de PARED" )

[node name="scene_change" parent="map/triggers" index="0" instance=ExtResource( 8 )]
position = Vector2( 152, 200 )
relative_spawn_pos = false
is_world_coords = false

[node name="spawn_pos" parent="map/triggers/scene_change" index="0"]
position = Vector2( 8, 20 )

[connection signal="text_display_finished" from="textbox" to="." method="_on_textbox_text_display_finished"]
[connection signal="text_display_started" from="textbox" to="." method="_on_textbox_text_display_started"]

[editable path="map"]
[editable path="map/triggers/scene_change"]
